# PongSDL2

./: CMakeLists.txt  Game.cpp  Game.hpp  README.md  main.cpp
src/: Config.hpp  main.cpp
src/controller/: GameManager.cpp  GameManager.hpp  IGame.hpp  IInputManager.hpp  IRenderable.hpp  ISprite.hpp  Pong.cpp  Pong.hpp
src/model/: Ball.cpp  Ball.hpp  Player.cpp  Player.hpp  Pong.cpp  Pong.hpp  PongBot.cpp  PongBot.hpp  PongPlayer.cpp  PongPlayer.hpp
src/utility/: CollisionDetector.cpp  CollisionDetector.hpp  Logger.hpp  MovementVector.hpp  Position.hpp  Random.cpp  Random.hpp  Rectangle.cpp  Rectangle.hpp
src/view/: GameWindow.cpp  GameWindow.hpp  IRenderable.hpp  Input.hpp  RectSprite.cpp  RectSprite.hpp  Sprite.cpp  Sprite.hpp  TextSprite.cpp  TextSprite.hpp
